src/objects/CventEvents__AttendeeTemp__c.object
<CustomObject>
    <fields>
        <fullName>LEGACYCountry__c</fullName>
        <label>LEGACY - Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Saint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYCountryold__c</fullName>
        <label>LEGACY - Country old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYCredentialsWellSpect__c</fullName>
        <label>LEGACY - Credentials - WellSpect</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Case Manager</fullName>
                </value>
                <value>
                    <fullName>LPN Licensed Practical Nurse</fullName>
                </value>
                <value>
                    <fullName>MA Medical Assistant</fullName>
                </value>
                <value>
                    <fullName>MD Medical Doctor</fullName>
                </value>
                <value>
                    <fullName>NP Nurse Practitioner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>OT Occupational Therapist</fullName>
                </value>
                <value>
                    <fullName>PA Physician Assistant</fullName>
                </value>
                <value>
                    <fullName>PT Physical Therapist</fullName>
                </value>
                <value>
                    <fullName>RN Registered Nurse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYDENTSPLYGACAccountNumber__c</fullName>
        <label>LEGACY - DENTSPLY GAC Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYDSOList__c</fullName>
        <label>LEGACY - DSO List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYDentalCouncilRegistrationNo__c</fullName>
        <label>LEGACY - Dental Council Registration No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYDepartment__c</fullName>
        <label>LEGACY - Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYDietaryRestrictions__c</fullName>
        <label>LEGACY - Dietary Restrictions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Gluten Free</fullName>
                </value>
                <value>
                    <fullName>Halal</fullName>
                </value>
                <value>
                    <fullName>Kosher</fullName>
                </value>
                <value>
                    <fullName>No Dairy</fullName>
                </value>
                <value>
                    <fullName>No Fish</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>No Nuts</fullName>
                </value>
                <value>
                    <fullName>Pescatarian</fullName>
                </value>
                <value>
                    <fullName>Vegan</fullName>
                </value>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYDivision__c</fullName>
        <label>LEGACY - Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYDoyouownCEREC__c</fullName>
        <label>LEGACY - Do you own CEREC?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYDoyouownSchickIntraOralSe__c</fullName>
        <label>LEGACY - Do you own Schick Intra Oral Se</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYEmergencyContactName__c</fullName>
        <label>LEGACY - Emergency Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYEmergencyContactPhone__c</fullName>
        <label>LEGACY - Emergency Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYEmployee__c</fullName>
        <label>LEGACY - Employee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYFirstNameonBadge__c</fullName>
        <label>LEGACY - First Name on Badge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYGDCNumber__c</fullName>
        <label>LEGACY - GDC Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYGraduationDate__c</fullName>
        <label>LEGACY - Graduation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LEGACYGroup__c</fullName>
        <label>LEGACY - Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYHenryScheinJDENumber__c</fullName>
        <label>LEGACY - Henry Schein JDE Number:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYHotelRoomsNeeded__c</fullName>
        <label>LEGACY - Hotel Rooms Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYHowDidYouHearaboutthisEve__c</fullName>
        <label>LEGACY - How Did You Hear about this Eve</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYImplantsManager__c</fullName>
        <label>LEGACY - Implants Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYIndividualNPINumber__c</fullName>
        <label>LEGACY - Individual NPI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYIndividualNationalProviderId__c</fullName>
        <label>LEGACY - Individual National Provider Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYInstallDate__c</fullName>
        <label>LEGACY - Install Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LEGACYLocation__c</fullName>
        <label>LEGACY - Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYManagerName__c</fullName>
        <label>LEGACY - Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYMarketUnitCountry__c</fullName>
        <label>LEGACY - Market Unit - Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYNPINumber__c</fullName>
        <label>LEGACY - NPI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYNameasitappearsonyourlice__c</fullName>
        <label>LEGACY - Name as it appears on your lice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYPDSILocation__c</fullName>
        <label>LEGACY - PDSI Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYPattersonCustomerNumber__c</fullName>
        <label>LEGACY - Patterson Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYPostalCode__c</fullName>
        <label>LEGACY - Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYPracticeAddress__c</fullName>
        <label>LEGACY - Practice Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYPreferredbadgename__c</fullName>
        <label>LEGACY - Preferred badge name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYProfession__c</fullName>
        <label>LEGACY - Profession</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dental Assistant</fullName>
                </value>
                <value>
                    <fullName>Dental Hygienist</fullName>
                </value>
                <value>
                    <fullName>Dental Student</fullName>
                </value>
                <value>
                    <fullName>Dental Technician/Laboratory (Dental Technician)</fullName>
                </value>
                <value>
                    <fullName>Denturist</fullName>
                </value>
                <value>
                    <fullName>Endodontist</fullName>
                </value>
                <value>
                    <fullName>General Practitioner (General Dentist)</fullName>
                </value>
                <value>
                    <fullName>Oral and Maxillofacial Surgeon (Maxillofacial Surgeon)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Periodontist</fullName>
                </value>
                <value>
                    <fullName>Prosthodontist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYPromoCode__c</fullName>
        <label>LEGACY - Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYPromotionalCode__c</fullName>
        <label>LEGACY - Promotional Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYProvince__c</fullName>
        <label>LEGACY - Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYRegion__c</fullName>
        <label>LEGACY - Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>USA &amp; Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYRegistrationType__c</fullName>
        <label>LEGACY - Registration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Assistant/EFDA&apos;s</fullName>
                </value>
                <value>
                    <fullName>Business  Team</fullName>
                </value>
                <value>
                    <fullName>Dentist</fullName>
                </value>
                <value>
                    <fullName>Hygienist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYRelationshiptoEmergencyConta__c</fullName>
        <label>LEGACY - Relationship to Emergency Conta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYRole__c</fullName>
        <label>LEGACY - Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Business Team</fullName>
                </value>
                <value>
                    <fullName>Dentist</fullName>
                </value>
                <value>
                    <fullName>EFDA</fullName>
                </value>
                <value>
                    <fullName>Hygienist</fullName>
                </value>
                <value>
                    <fullName>Lab Technician</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYSBU__c</fullName>
        <label>LEGACY - SBU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Distribution Sales</fullName>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                </value>
                <value>
                    <fullName>EO Imaging</fullName>
                </value>
                <value>
                    <fullName>Implants</fullName>
                </value>
                <value>
                    <fullName>Institutional Sales</fullName>
                </value>
                <value>
                    <fullName>IO Imaging</fullName>
                </value>
                <value>
                    <fullName>Laboratory CAD/CAM</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>NAIG (Large Groups)</fullName>
                </value>
                <value>
                    <fullName>Orthodontics</fullName>
                </value>
                <value>
                    <fullName>Preventive</fullName>
                </value>
                <value>
                    <fullName>Prosthetics</fullName>
                </value>
                <value>
                    <fullName>Restorative</fullName>
                </value>
                <value>
                    <fullName>Treatment Centers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYSalutation__c</fullName>
        <label>LEGACY - Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYSelectOne__c</fullName>
        <label>LEGACY - Select One</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Dentist</fullName>
                </value>
                <value>
                    <fullName>Hygienist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYSendmetextupdatesimportan__c</fullName>
        <label>LEGACY - Send me text updates &amp; importan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYSpecialtyWS__c</fullName>
        <label>LEGACY - SpecialtyWS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Auxiliary</fullName>
                </value>
                <value>
                    <fullName>Faculty</fullName>
                </value>
                <value>
                    <fullName>General Practitioner</fullName>
                </value>
                <value>
                    <fullName>Hygienist</fullName>
                </value>
                <value>
                    <fullName>Implantologist</fullName>
                </value>
                <value>
                    <fullName>Laboratory Technician</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Oral and Maxillofacial Surgeon</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Periodontist</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>Prosthodontist</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Surgical Assistant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYSpecialtyWellspect__c</fullName>
        <label>LEGACY - Specialty - Wellspect</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adult Urology</fullName>
                </value>
                <value>
                    <fullName>Multiple Sclerosis</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pediatric Urology</fullName>
                </value>
                <value>
                    <fullName>Spina Bifida</fullName>
                </value>
                <value>
                    <fullName>Spinal Cord Injury</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYSpecialty__c</fullName>
        <label>LEGACY - Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Endodontist</fullName>
                </value>
                <value>
                    <fullName>General Dentist</fullName>
                </value>
                <value>
                    <fullName>Oral and Maxillofacial Surgeon (OMS)</fullName>
                </value>
                <value>
                    <fullName>Orthodontist</fullName>
                </value>
                <value>
                    <fullName>Periodontist</fullName>
                </value>
                <value>
                    <fullName>Prosthodontist</fullName>
                </value>
                <value>
                    <fullName>Radiologist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYSpecialtyold__c</fullName>
        <label>LEGACY - Specialty - old</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Endodontist</fullName>
                </value>
                <value>
                    <fullName>General Practitioner</fullName>
                </value>
                <value>
                    <fullName>Oral Surgeon</fullName>
                </value>
                <value>
                    <fullName>Orthodontist</fullName>
                </value>
                <value>
                    <fullName>Pediatric</fullName>
                </value>
                <value>
                    <fullName>Periodontist</fullName>
                </value>
                <value>
                    <fullName>Prosthodontist</fullName>
                </value>
                <value>
                    <fullName>Radiologist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYStateLicenseNumberState__c</fullName>
        <label>LEGACY - State License  Number State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYStateLicenseNumber__c</fullName>
        <label>LEGACY - State License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYStateProvinceorTerritory__c</fullName>
        <label>LEGACY - State, Province or Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYTESTManagerName__c</fullName>
        <label>LEGACY - TEST Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYTitleCustom__c</fullName>
        <label>LEGACY - Title-Custom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYTitlenew__c</fullName>
        <label>LEGACY - Title new</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYTrainingVoucherCode__c</fullName>
        <label>LEGACY - Training Voucher Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYTypeofdentalpractice__c</fullName>
        <label>LEGACY - Type of dental practice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYUniqueID__c</fullName>
        <label>LEGACY - Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYUniversity__c</fullName>
        <label>LEGACY - University</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYVATNumber__c</fullName>
        <label>LEGACY - VAT Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYWSBillingInstruction__c</fullName>
        <label>LEGACY - WS Billing Instruction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYWSDiscountGroup__c</fullName>
        <label>LEGACY - WS Discount Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYWSFlightCost__c</fullName>
        <label>LEGACY - WS Flight Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYYear__c</fullName>
        <label>LEGACY - Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYYourGender__c</fullName>
        <label>LEGACY - Your Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Non-Binary</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYYourRegion__c</fullName>
        <label>LEGACY - Your Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Canada Central</fullName>
                </value>
                <value>
                    <fullName>Canada East</fullName>
                </value>
                <value>
                    <fullName>Canada West</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Gulf Coast</fullName>
                </value>
                <value>
                    <fullName>Lab North</fullName>
                </value>
                <value>
                    <fullName>Lab South</fullName>
                </value>
                <value>
                    <fullName>Lab West</fullName>
                </value>
                <value>
                    <fullName>MidAtlantic</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>New England</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Northern California</fullName>
                </value>
                <value>
                    <fullName>North Texas</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>Rocky Mountains</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Southern California</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LicenseId__c</fullName>
        <label>LicenseId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LicenseState__c</fullName>
        <label>LicenseState</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alaska</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPINumberCHPNumberorLicenseNumb__c</fullName>
        <label>* NPI Number, CHP Number or License Numb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OkayToCall__c</fullName>
        <label>OkayToCall</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>